# nixos-hosts

./: .gitignore  README.md  configuration.nix  flake.nix  hardware-configuration.nix  link.sh
flake-templates/: copy_flakes.sh  python.nix
list-orderer/: Cargo.toml  shell.nix
list-orderer/src/: lib.rs  main.rs
scripts/: dconf_dump.sh
shell-templates/: README.md  copy_shells.sh  go.nix  tor.nix
shells/: c.nix  go.nix  haskell.nix  python.nix  rust.nix  tor.nix
system-config/: README.md  default.nix  gnome.nix  pkgs.nix
system-config/core/: bootloader.nix  connections.nix  fonts.nix  locale.nix
user-config/: README.md  default.nix  personal-packages.nix
user-config/display/: dconf.nix  gtk.nix
user-config/programming/: codium.nix
user-config/terminal/: alacritty.nix  bat.nix  direnv.nix  git.nix  helix.nix  htop.nix  lsd.nix  neovim.nix  starship.nix  zsh.nix
